fix: remove padding delete button on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -143,6 +143,7 @@ body {
     width: 18px;
     border: none;
     cursor: pointer;
+    padding: 0;
 }
 
 .delete-button:hover {
